added all projects to projects.html;

--- a/projects/project6.html
+++ b/projects/project6.html
@@ -78,14 +78,18 @@
 
     <section class="ftco-section ftco-no-pb" style="padding-top: 1em">
       <div class="container">
+        <div class="row" style="padding-bottom: 1em">
+          <h3>Dashboard 1</h3>
+          <div class='tableauPlaceholder' id='viz1735978572914' style='position: relative'><noscript><a href='#'><img alt='University Admission Criteria and Tuition Fee Associations ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Un&#47;UniversityRanking_17336163911970&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='UniversityRanking_17336163911970&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Un&#47;UniversityRanking_17336163911970&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1735978572914');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height='877px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+          <h3>Dashboard 2</h3>
+          <div class='tableauPlaceholder' id='viz1735978342877' style='position: relative'><noscript><a href='#'><img alt='Undergraduate Students&#39; Race Distrubution in Universities ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Un&#47;UniversityRanking-Race&#47;Dashboard2&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='UniversityRanking-Race&#47;Dashboard2' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Un&#47;UniversityRanking-Race&#47;Dashboard2&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1735978342877');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height='1177px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+        </div>
         <div class="row">
           <div class="col-lg-8 ftco-animate">
             <h2 class="mb-3">Introduction</h2>
             <p>Introduce the project.</p>
-            <p><img src="images/image_6.jpg" alt="" class="img-fluid"></p>
+            <!--<p><img src="images/image_6.png" alt="" class="img-fluid"></p>-->
             <h2 class="mb-3 mt-5">Next Section...</h2>
-            <p>...</p>
-            <p>...</p>
             <p>...</p>
           </div> <!-- .col-md-8 -->
 
@@ -93,32 +97,19 @@
             <div class="sidebar-box ftco-animate">
               <h3 class="heading-sidebar">Resources</h3>
               <ul class="ftco-sidebar-social">
-                <li class="ftco-animate"><a href="#"><span class="icon-github"></span>GitHub Repository</a></li>
-                <li class="ftco-animate"><a href="#"><span class="fa fa-file-pdf-o" aria-hidden="true"></span>Project Report</a></li>
-                <li class="ftco-animate"><a href="#"><span class="fas fa-file-alt"></span>Publication</a></li>
+                <li class="ftco-animate"><a href="https://public.tableau.com/views/UniversityRanking_17336163911970/Dashboard1?:language=en-GB&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" target="_blank" rel="noopener noreferrer"><span class="fa fa-link" aria-hidden="true"></span>Dashboard 1</a></li>
+                <li class="ftco-animate"><a href="https://public.tableau.com/views/UniversityRanking-Race/Dashboard2?:language=en-GB&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" target="_blank" rel="noopener noreferrer"><span class="fa fa-link" aria-hidden="true"></span>Dashboard 2</a></li>
               </ul>
             </div>
             
             <div class="sidebar-box ftco-animate">
               <h3 class="heading-sidebar">Tech Stack</h3>
               <div class="tagcloud">
-                <a class="tag-cloud-link">Python</a>
-                <a class="tag-cloud-link">office</a>
-                <a class="tag-cloud-link">building</a>
-                <a class="tag-cloud-link">land</a>
-                <a class="tag-cloud-link">table</a>
-                <a class="tag-cloud-link">interior</a>
-                <a class="tag-cloud-link">exterior</a>
-                <a class="tag-cloud-link">industrial</a>
+                <a class="tag-cloud-link">MS Excel</a>
+                <a class="tag-cloud-link">Tableau</a>
               </div>
             </div>
-
-            <div class="sidebar-box ftco-animate">
-              <h3 class="heading-sidebar">Paragraph</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate numquam!</p>
-            </div>
           </div>
-
         </div>
       </div>
     </section> <!-- .section -->
