--- a/projects/projects.html
+++ b/projects/projects.html
@@ -76,63 +76,209 @@
     <section class="ftco-section ftco-no-pb" id="projects-sub-section">
       <div class="container">
         <div class="row d-flex">
-          <!--project3-->
+          <!--project10-->
           <div class="col-md-4 d-flex ftco-animate">
-          <div class="blog-entry justify-content-end">
-            <a href="project3.html" class="block-20" style="background-image: url('images/image_3.jpg');"></a>
-            <div class="text mt-3 float-right d-block">
-              <div class="d-flex align-items-center mb-2 meta">
-              <p class="mb-0">
-                <span class="mr-2">March, 2024</span>
-                <!--<a href="#" class="mr-2">Admin</a>-->
-                <a href="https://github.com/vinay-ram1999/WebScraping-R" target="_blank" rel="noopener noreferrer" class="meta-chat">
-                  <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/WebScraping-R">  
-                  <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/WebScraping-R">
-                </a>
-              </p>
-            </div>
-            <h3 class="heading"><a class="project-title" project-number="3" href="project3.html"></a></h3>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-            </div>
-          </div>
-          </div>
-          <!--project2-->
-          <div class="col-md-4 d-flex ftco-animate">
-          <div class="blog-entry justify-content-end">
-            <a href="project2.html" class="block-20" style="background-image: url('images/image_2.jpg');"></a>
-            <div class="text mt-3 float-right d-block">
-              <div class="d-flex align-items-center mb-2 meta">
-              <p class="mb-0">
-                <span class="mr-2">February, 2023</span>
-                <!--<a href="#" class="mr-2">Admin</a>-->
-                <a href="https://github.com/vinay-ram1999/AlgoTrade-API" target="_blank" rel="noopener noreferrer" class="meta-chat">
-                  <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/AlgoTrade-API">  
-                  <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/AlgoTrade-API">
-                </a>
-              </p>
-            </div>
-            <h3 class="heading"><a class="project-title" project-number="2" href="project2.html"></a></h3>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-            </div>
-          </div>
-          </div>
-          <!--project1-->
-          <div class="col-md-4 d-flex ftco-animate">
-          <div class="blog-entry">
-            <a href="project1.html" class="block-20" style="background-image: url('images/image_1.jpg');"></a>
-            <div class="text mt-3 float-right d-block">
-              <div class="d-flex align-items-center mb-2 meta">
+            <div class="blog-entry justify-content-end">
+              <a href="project10.html" class="block-20" style="background-image: url('images/image_10.jpg');"></a>
+              <div class="text mt-3 float-right d-block">
+                <div class="d-flex align-items-center mb-2 meta">
                 <p class="mb-0">
-                  <span class="mr-2">March, 2020</span>
+                  <span class="mr-2">September, 2024</span>
                   <!--<a href="#" class="mr-2">Admin</a>-->
-                  <a href="https://github.com/UnstructuredFVM" target="_blank" rel="noopener noreferrer" class="meta-chat">
-                    <img alt="GitHub followers" src="https://img.shields.io/github/followers/UnstructuredFVM">
+                  <a href="https://github.com/vinay-ram1999/TradeForecast" target="_blank" rel="noopener noreferrer" class="meta-chat">
+                    <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/TradeForecast">  
+                    <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/TradeForecast">
                   </a>
                 </p>
               </div>
-              <h3 class="heading"><a class="project-title" project-number="1" href="project1.html"></a></h3>
-              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+              <h3 class="heading"><a class="project-title" project-number="10" href="project10.html"></a></h3>
+              <p>A multi-horizon stock price forecasting framework using deep learning.</p>
+              </div>
             </div>
+          </div>
+          <!--project9-->
+          <div class="col-md-4 d-flex ftco-animate">
+            <div class="blog-entry justify-content-end">
+              <a href="project9.html" class="block-20" style="background-image: url('images/image_9.png');"></a>
+              <div class="text mt-3 float-right d-block">
+                <div class="d-flex align-items-center mb-2 meta">
+                <p class="mb-0">
+                  <span class="mr-2">September, 2024</span>
+                  <!--<a href="#" class="mr-2">Admin</a>-->
+                  <a href="https://github.com/vinay-ram1999/Healthcare-Analytics" target="_blank" rel="noopener noreferrer" class="meta-chat">
+                    <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/Healthcare-Analytics">  
+                    <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/Healthcare-Analytics">
+                  </a>
+                </p>
+              </div>
+              <h3 class="heading"><a class="project-title" project-number="9" href="project9.html"></a></h3>
+              <p>Exploratory data analysis on Cardiovascular diseases (CVD) data using MySQL & Tableau.</p>
+              </div>
+            </div>
+          </div>
+          <!--project8-->
+          <div class="col-md-4 d-flex ftco-animate">
+            <div class="blog-entry justify-content-end">
+              <a href="project8.html" class="block-20" style="background-image: url('images/image_8.jpeg');"></a>
+              <div class="text mt-3 float-right d-block">
+                <div class="d-flex align-items-center mb-2 meta">
+                <p class="mb-0">
+                  <span class="mr-2">August, 2024</span>
+                  <!--<a href="#" class="mr-2">Admin</a>-->
+                  <a href="https://github.com/vinay-ram1999/SRDBv5-Analytics" target="_blank" rel="noopener noreferrer" class="meta-chat">
+                    <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/SRDBv5-Analytics">  
+                    <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/SRDBv5-Analytics">
+                  </a>
+                </p>
+              </div>
+              <h3 class="heading"><a class="project-title" project-number="8" href="project8.html"></a></h3>
+              <p>Exploratory data analysis on global soil respiration data using R, MySQL & Tableau.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row d-flex">
+          <!--project7-->
+          <div class="col-md-4 d-flex ftco-animate">
+            <div class="blog-entry">
+              <a href="project7.html" class="block-20" style="background-image: url('images/image_7.jpeg');"></a>
+              <div class="text mt-3 float-right d-block">
+                <div class="d-flex align-items-center mb-2 meta">
+                  <p class="mb-0">
+                    <span class="mr-2">December, 2024</span>
+                    <!--<a href="#" class="mr-2">Admin</a>-->
+                    <a href="https://github.com/vinay-ram1999/user_management" target="_blank" rel="noopener noreferrer" class="meta-chat">
+                      <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/user_management">  
+                      <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/user_management">
+                    </a>
+                  </p>
+                </div>
+                <h3 class="heading"><a class="project-title" project-number="7" href="project7.html"></a></h3>
+                <p>Event-driven email notification system for users with Celery, Kafka and Postgres.</p>
+              </div>
+            </div>
+          </div>
+          <!--project6-->
+          <div class="col-md-4 d-flex ftco-animate">
+            <div class="blog-entry justify-content-end">
+              <a href="project6.html" class="block-20" style="background-image: url('images/image_6.png');"></a>
+              <div class="text mt-3 float-right d-block">
+                <div class="d-flex align-items-center mb-2 meta">
+                <p class="mb-0">
+                  <span class="mr-2">October, 2024</span>
+                  <!--<a href="#" class="mr-2">Admin</a>
+                  <a href="https://github.com/vinay-ram1999/" target="_blank" rel="noopener noreferrer" class="meta-chat">
+                    <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/">  
+                    <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/">-->
+                  </a>
+                </p>
+              </div>
+              <h3 class="heading"><a class="project-title" project-number="6" href="project6.html"></a></h3>
+              <p>Interactive dashboards for visualizing University rankings using Tableau.</p>
+              </div>
+            </div>
+          </div>
+          <!--project5-->
+          <div class="col-md-4 d-flex ftco-animate">
+            <div class="blog-entry justify-content-end">
+              <a href="project5.html" class="block-20" style="background-image: url('images/image_5.gif');"></a>
+              <div class="text mt-3 float-right d-block">
+                <div class="d-flex align-items-center mb-2 meta">
+                <p class="mb-0">
+                  <span class="mr-2">October, 2023</span>
+                  <!--<a href="#" class="mr-2">Admin</a>-->
+                  <a href="https://github.com/vinay-ram1999/SolarFlareNet" target="_blank" rel="noopener noreferrer" class="meta-chat">
+                    <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/SolarFlareNet">  
+                    <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/SolarFlareNet">
+                  </a>
+                </p>
+              </div>
+              <h3 class="heading"><a class="project-title" project-number="5" href="project5.html"></a></h3>
+              <p>Deep learning framework for predicting solar flares using transformer model incorporated with Explainable AI (xAI) tools.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row d-flex">
+          <!--project4-->
+          <div class="col-md-4 d-flex ftco-animate">
+            <div class="blog-entry">
+              <a href="project4.html" class="block-20" style="background-image: url('images/image_4.jpg');"></a>
+              <div class="text mt-3 float-right d-block">
+                <div class="d-flex align-items-center mb-2 meta">
+                  <p class="mb-0">
+                    <span class="mr-2">February, 2023</span>
+                    <!--<a href="#" class="mr-2">Admin</a>-->
+                    <a href="https://github.com/vinay-ram1999/AlgoTrade-API" target="_blank" rel="noopener noreferrer" class="meta-chat">
+                      <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/AlgoTrade-API">  
+                      <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/AlgoTrade-API">
+                    </a>
+                  </p>
+                </div>
+                <h3 class="heading"><a class="project-title" project-number="4" href="project4.html"></a></h3>
+                <p>Fully automated NSE Stock/Equity trading-bot for Kotak Securities API with integrated back testing and ML algorithms.</p>
+              </div>
+            </div>
+          </div>
+          <!--project3-->
+          <div class="col-md-4 d-flex ftco-animate">
+            <div class="blog-entry justify-content-end">
+              <a href="project3.html" class="block-20" style="background-image: url('images/image_3.png');"></a>
+              <div class="text mt-3 float-right d-block">
+                <div class="d-flex align-items-center mb-2 meta">
+                <p class="mb-0">
+                  <span class="mr-2">December, 2023</span>
+                  <!--<a href="#" class="mr-2">Admin</a>-->
+                  <a href="https://github.com/vinay-ram1999/CS631-DMSD" target="_blank" rel="noopener noreferrer" class="meta-chat">
+                    <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/CS631-DMSD">  
+                    <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/CS631-DMSD">
+                  </a>
+                </p>
+              </div>
+              <h3 class="heading"><a class="project-title" project-number="3" href="project3.html"></a></h3>
+              <p>Design and implementation of a relational database system for an online store.</p>
+              </div>
+            </div>
+          </div>
+          <!--project2-->
+          <div class="col-md-4 d-flex ftco-animate">
+            <div class="blog-entry justify-content-end">
+              <a href="project2.html" class="block-20" style="background-image: url('images/image_2.jpg');"></a>
+              <div class="text mt-3 float-right d-block">
+                <div class="d-flex align-items-center mb-2 meta">
+                <p class="mb-0">
+                  <span class="mr-2">March, 2024</span>
+                  <!--<a href="#" class="mr-2">Admin</a>-->
+                  <a href="https://github.com/vinay-ram1999/WebScraping-R" target="_blank" rel="noopener noreferrer" class="meta-chat">
+                    <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/WebScraping-R">  
+                    <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/WebScraping-R">
+                  </a>
+                </p>
+              </div>
+              <h3 class="heading"><a class="project-title" project-number="2" href="project2.html"></a></h3>
+              <p>A web-scrapping tool built using R to collect published articles data and perform exploratory data analysis.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row d-flex">
+          <!--project1-->
+          <div class="col-md-4 d-flex ftco-animate">
+            <div class="blog-entry">
+              <a href="project1.html" class="block-20" style="background-image: url('images/image_1.jpg');"></a>
+              <div class="text mt-3 float-right d-block">
+                <div class="d-flex align-items-center mb-2 meta">
+                  <p class="mb-0">
+                    <span class="mr-2">March, 2020</span>
+                    <!--<a href="#" class="mr-2">Admin</a>-->
+                    <a href="https://github.com/UnstructuredFVM" target="_blank" rel="noopener noreferrer" class="meta-chat">
+                      <img alt="GitHub followers" src="https://img.shields.io/github/followers/UnstructuredFVM">
+                    </a>
+                  </p>
+                </div>
+                <h3 class="heading"><a class="project-title" project-number="1" href="project1.html"></a></h3>
+                <p>A multi-dimentional unstructured CFD solver built using Python which can run on multiple architectures like CPU, OpenMP & CUDA.</p>
+              </div>
             </div>
           </div>
         </div>
