--- a/projects/project5.html
+++ b/projects/project5.html
@@ -82,7 +82,7 @@
           <div class="col-lg-8 ftco-animate">
             <h2 class="mb-3">Introduction</h2>
             <p>Introduce the project.</p>
-            <p><img src="images/image_5.jpg" alt="" class="img-fluid"></p>
+            <p><img src="images/image_5.gif" alt="" class="img-fluid"></p>
             <h2 class="mb-3 mt-5">Next Section...</h2>
             <p>...</p>
             <p>...</p>
