added my image;

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/UG_grad.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="https://alumni.srmap.edu.in/albums/photos/180092.dz">Convocation</a></h3>
+	    					<h3><a href="https://alumni.srmap.edu.in/albums/photos/180092.dz" target="_blank" rel="noopener noreferrer">Convocation</a></h3>
 	    					<span>B.Tech.</span>
 	    				</div>
     				</div>
@@ -396,7 +396,7 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/scholarship_bg.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Scholarship of 50% tuition fee</a></h3>
+	    					<h3><a>Scholarship of 50% tuition fee</a></h3>
 	    					<span>B.Tech.</span>
 	    				</div>
     				</div>
@@ -408,7 +408,7 @@
 		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg);">
 		    					<div class="overlay"></div>
 			    				<div class="text text-center p-4">
-			    					<h3><a href="#">Branding &amp; tesign</a></h3>
+			    					<h3><a href="#" target="_blank" rel="noopener noreferrer">Branding &amp; tesign</a></h3>
 			    					<span>Web Design</span>
 			    				</div>
 		    				</div>
