--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
           <div class="col-md-12 text-center">
 			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             <p>
-				Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+				Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 			</p>
           </div>
         </div>
