made credits and project navbar dynamic using javascript; updated my image; working on project blogs;

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <ul class="navbar-nav nav ml-auto">
+	        <ul class="navbar-nav nav ml-auto ">
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#education-section" class="nav-link"><span>Education</span></a></li>
@@ -58,7 +58,7 @@
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_1.png);">
+	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_2.png);">
 	          		<div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -107,32 +107,32 @@
     			<div class="col-md-6 col-lg-5 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/bg_1.png);">
+	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/bg_2.png);">
 	    				</div>
     				</div>
     			</div>
     			<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
     				<div class="row justify-content-start pb-3">
-		          <div class="col-md-12 heading-section ftco-animate">
-		          	<h1 class="big">About</h1>
-		            <h2 class="mb-4">About Me</h2>
-		            <p>I am a dedicated Data Science graduate student at the New Jersey Institute of Technology, with over four years of programming experience and a strong passion for data-driven problem-solving. I am proficient in data engineering, exploratory data analysis, statistical modeling, machine learning, and deploying end-to-end solutions.</p>
-					<p>My academic and professional journey has been driven by a commitment to leveraging data and technology to uncover insights and drive informed decision-making. I continuously enhance my technical proficiency in programming, data structures, algorithms, and DevOps tools to adapt to the evolving demands of the tech industry.</p>
-		          </div>
-		        </div>
-	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
-              <div class="text">
-				<!--
-              	<p class="mb-4">
-	                <span class="number" data-number="120">0</span>
-	                <span>Project complete</span>
-                </p>
-				-->
-                <p><a href="files/master_resume.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-primary py-3 px-3">Resume</a></p>
-              </div>
-	          </div>
-	        </div>
-        </div>
+						<div class="col-md-12 heading-section ftco-animate">
+							<h1 class="big">About</h1>
+							<h2 class="mb-4">About Me</h2>
+							<p>I am a dedicated Data Science graduate student at the New Jersey Institute of Technology, with over four years of programming experience and a strong passion for data-driven problem-solving. I am proficient in data engineering, exploratory data analysis, statistical modeling, machine learning, and deploying end-to-end solutions.</p>
+							<p>My academic and professional journey has been driven by a commitment to leveraging data and technology to uncover insights and drive informed decision-making. I continuously enhance my technical proficiency in programming, data structures, algorithms, and DevOps tools to adapt to the evolving demands of the tech industry.</p>
+						</div>
+					</div>
+					<div class="counter-wrap ftco-animate d-flex mt-md-3">
+						<div class="text">
+							<!--
+							<p class="mb-4">
+								<span class="number" data-number="120">0</span>
+								<span>Project complete</span>
+							</p>
+							-->
+							<p><a href="files/master_resume.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-primary py-3 px-3">Resume</a></p>
+						</div>
+					</div>
+	        	</div>
+        	</div>
     	</div>
     </section>
 
@@ -356,12 +356,13 @@
 			<div class="col-md-7 heading-section text-center ftco-animate">
 				<h1 class="big big-2">Projects</h1>
 				<h2 class="mb-4">Projects</h2>
+				<p>Click on "View Projects" to open projects section.</p>
 			</div>
         </div>
+		<div class="text-center">
+			<p><a href="projects/projects.html" class="btn btn-primary py-3 px-3">View Projects</a></p>
+		</div>
       </div>
-	  <div class="text-center">
-		<p><a href="projects/projects.html" class="btn btn-primary py-3 px-3">View Projects</a></p>
-	  </div>
     </section>
 
 	<section class="ftco-section ftco-project ftco-no-pb" id="achievements-section">
@@ -370,7 +371,7 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Achievements</h1>
             <h2 class="mb-4">Achievements</h2>
-            <!--<p>Here are some of my achievements.</p>-->
+            <p>Hover the cursor / Touch on the achievement to know more.</p>
           </div>
         </div>
     		<div class="row">
@@ -378,8 +379,9 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/google-data-analytics-professional-certificate.2.png); background-size: 90%;">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="https://www.credly.com/badges/d7fbd3c9-a7e4-4182-a2ed-cd1b33c8044f/public_url" target="_blank" rel="noopener noreferrer">Google Data Analytics Professional Certificate</a></h3>
+	    					<h3><a>Google Data Analytics Professional Certificate</a></h3>
 	    					<span>Coursera</span>
+							<p><a href="https://www.credly.com/badges/d7fbd3c9-a7e4-4182-a2ed-cd1b33c8044f/public_url" target="_blank" rel="noopener noreferrer">click here</a> to verify</p>
 	    				</div>
     				</div>
   				</div>
@@ -387,8 +389,9 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/UG_grad.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="https://alumni.srmap.edu.in/albums/photos/180092.dz" target="_blank" rel="noopener noreferrer">Convocation</a></h3>
+	    					<h3><a>Convocation</a></h3>
 	    					<span>B.Tech.</span>
+							<p><a href="https://alumni.srmap.edu.in/albums/photos/180092.dz" target="_blank" rel="noopener noreferrer">Album</a></p>
 	    				</div>
     				</div>
   				</div>
@@ -488,9 +491,7 @@
         <div class="row">
           <div class="col-md-12 text-center">
 			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            <p>
-				Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-			</p>
+            <p class="credits"></p>
           </div>
         </div>
       </div>
