--- a/projects/project6.html
+++ b/projects/project6.html
@@ -38,18 +38,7 @@
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
 
-        <div class="collapse navbar-collapse" id="ftco-nav">
-          <ul class="navbar-nav nav ml-auto">
-            <li class="nav-item"><a href="../index.html#home-section" class="nav-link"><span>Home</span></a></li>
-            <li class="nav-item"><a href="../index.html#about-section" class="nav-link"><span>About</span></a></li>
-            <li class="nav-item"><a href="../index.html#education-section" class="nav-link"><span>Education</span></a></li>
-            <li class="nav-item"><a href="../index.html#skills-section" class="nav-link"><span>Skills</span></a></li>
-            <!--<li class="nav-item"><a href="../index.html#skills-section" class="nav-link"><span>Skills</span></a></li>-->
-            <li class="nav-item"><a href="../index.html#projects-section" class="nav-link"><span>Projects</span></a></li>
-            <li class="nav-item"><a href="../index.html#achievements-section" class="nav-link"><span>Achievements</span></a></li>
-            <li class="nav-item"><a href="../index.html#contact-section" class="nav-link"><span>Contact</span></a></li>
-          </ul>
-        </div>
+        <div class="collapse navbar-collapse project-navbar" id="ftco-nav"></div>
 	      </div>
 	    </div>
 	  </nav>
@@ -119,9 +108,7 @@
       <div class="row">
         <div class="col-md-12 text-center">
           <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          <p>
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-          </p>
+          <p class="credits"></p>
         </div>
       </div>
     </div>
